--- a/css/reset.scss
+++ b/css/reset.scss
@@ -70,17 +70,19 @@ header {
     top: 0;
     width: 100%;
     z-index: 5;
-    height: 60px;
+    height: 100px;
 
     .nav-b {
-        width: $wid;
+        width: 100%;
+        max-width: $wid;
 
         @include flex(space-between, flex-start) {}
-
+        align-items: center;
         margin: 0 auto;
-        padding: 12px 0;
+        padding: 12px 16px;
         z-index: 999;
         position: relative;
+        height: 100px;
 
         >a {
             @include font(600, 25px);
@@ -104,9 +106,14 @@ header {
                 color: white;
 
                 >a {
-                    @include font(600, 14px);
-                    color: white;
+                    @include font(800, 20px);
                     text-align: center;
+                    color: #FFF;
+                    font-family: 'Pretendard';
+                    font-size: 20px;
+                    font-weight: 800;
+                    line-height: 14px;
+                    letter-spacing: 0.14px;                    
                 }
             }
 
@@ -153,7 +160,7 @@ header.active {
 .burger.active {
     width: 100%;
     height: 100vh;
-    background-color: #fe5e00;
+    background-color: #F60035;
     position: fixed;
     top: 0;
     left: 0;
@@ -166,6 +173,15 @@ header.active {
 
 .burger-ic {
     padding-top: 5px;
+    display: none;
+}
+.btn-login {
+    color: #FFF;
+    font-family: 'Pretendard';
+    font-size: 20px;
+    font-weight: 800;
+    line-height: 14px; 
+    letter-spacing: 0.14px;
 }
 
 .burger-top {
@@ -179,13 +195,11 @@ header.active {
 }
 
 .burger-list {
-    font-family: 'acumin-pro-condensed';
+    font-family: 'SUITE';
     @include font(900, 30px);
-    font-style: italic;
     display: flex;
     flex-direction: column;
     gap: 20px;
-
     >a {
         color: white;
     }
@@ -198,7 +212,7 @@ footer {
     width: 100%;
     background-color: #F60035;
     .inner {
-        padding: 128px 200px 100px 200px;
+        padding: 128px 100px 100px 100px;
         color: #fff;    
         .ft1 {
             border-bottom: 1px solid #fff;
