--- a/css/m_about.scss
+++ b/css/m_about.scss
@@ -1,421 +1,10 @@
-@media screen and (min-width: 721px) and (max-width: 1020px) {
-    
-@import "./reset";
-@import "./mixin";
-
-    $wid : 800px;
-
-    body, html{
-        @include reset;
-        font-family : 'Pretendard',sans-serif;
-    }
-
-    .font-title {
-        font-family: 'acumin-pro-condensed';
-        @include font(900, 90px);
-        font-style: italic;
-        color: #fe5e00;
-        width: $wid;
-        margin: 100px auto 0 auto;
-        line-height: 1;
-    }
-    
-    p {white-space: pre-line;}
-    a {text-decoration: none; color:#000;}
-    *{box-sizing: border-box}
-
-    body {position: relative;}
-
-    .m-video {
-        width: 100%;
-        position: absolute;
-        z-index: -1;
-        > video {
-        width: 100%;
-        object-fit: cover;
-        left: 0;
-        top: 0;
-        }
-    }
-
-    .brave {
-    margin: 0 auto;
-    width: $wid;
-    height: 850px;
-    padding: 500px 0 100px 0;
-        >p { 
-            @include flex(space-between,start ){flex-direction: column};
-            line-height: 1;
-            font-family: 'acumin-pro-condensed';
-            @include font(900, 80px);
-            font-style: italic;
-            color: white;
-            >span {
-                @include font(900, 120px);
-            }
-        }
-    }
-    .title {
-        width: $wid;
-        margin: 120px auto 0 auto;
-        color: #fe5e00;
-        font-size: 70px;
-        font-style: oblique;
-        font-weight: 600;
-    }
-    .atc-con{
-        width: $wid;
-        margin: 20px auto;
-        >p{
-            width: 100%;
-            margin: 30px 0;
-            line-height: 1.7;
-            
-        }
-    }
-
-    .atc-con-list{
-        width: $wid;
-        margin: 30px auto;
-        @include flex(space-between,center){}
-    }
-    .who{
-        width: 80%;
-        margin: 50px auto;
-        display: flex;
-        flex-wrap: wrap;
-        
-        .who-list {
-            width: 33%;
-            margin-bottom: 50px;
-            text-align: center;
-            @include font(900,15px);
-            >p:nth-of-type(1){
-                @include font(900, 70px);
-                color: #fe5e00;
-                >code {
-                    font-family: inherit;
-                }
-            }
-        }
-    }
-
-
-    .about-v {
-        width: $wid;
-        margin: 0 auto;
-        >video{
-            width: 100%;
-            object-fit: cover;
-        }
-    }
-    .values{
-        width: 33%;
-        text-align: center;
-        display: flex;
-        flex-wrap: wrap;
-        white-space : pre-line;
-        margin-bottom: 50px;
-    
-        >b{
-            width: 100%;
-            @include font(800,30px);
-        }
-        >p{
-            width: 100%;
-            color: #000000;
-            @include font(500,15px);
-            padding: 10px 0;
-            line-height: 1.7
-        }
-    }
-    
-    .jour-row{
-        width: $wid;
-        margin: 80px auto;
-        @include flex(center,stretch){};
-        position: relative;
-        > div:nth-of-type(2) {
-            width: 0;
-           
-            border: 2px solid #fe5e00;
-            margin: 0 80px;
-        }
-        figure {
-            position: sticky;
-            top:400px;
-            height: 150px;
-            left: 50%;
-            z-index: 2;
-    
-            >img {
-                width: 150px;
-                position: absolute;
-                top:0;
-                left: 50%;
-                transform: translateX(-50%);
-                z-index: 999;
-            }
-    
-        }
-    }
-    .col1{
-        @include flex(space-between,end){flex-direction: column;}
-    }
-
-    .jour-col{margin-top: 150px;}
-
-    .j-year{
-        color: #fe5e00;
-        @include font(800, 50px);
-        margin-bottom: 20px;
-    }
-    .j-month{
-        color: #ff8200;
-        @include font(600, 40px);
-        margin-bottom: 10px;
-    }
-
-    .j-event {@include font(600, 15px); margin-bottom: 20px;}
-    .j-event2 {@include font(400, 15px); margin-bottom: 10px;}
-    .j-img {width: 100%; margin: 10px 0;}
-
-    .j-circle {
-        position: absolute;
-        width: 25px;
-        height: 25px;
-        background-color:#fe5e00;
-        border-radius: 50px;    
-    }
-    .circle2{top : 11.5%;}
-    .bt-black {
-        width: $wid;
-        margin: 0 auto;
-        @include flex(center, center){};
-        @include font(600, 16px);
-        >a {
-        background-color: black;
-        color: white;
-        padding: 15px 25px;
-        border-radius: 100px;
-        &:hover{background-color: #fe5e00;}
-        }
-    } 
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media screen and (max-width: 720px) {
+    @import "_mixin";
 
-    @import "./reset";
-    @import "./mixin";
     
-    $wid : 500px;
-    
-    body, html{
-        @include reset;
-        font-family : 'Pretendard',sans-serif;
+    .barve {
+        img { width: 100px !important; }
     }
-    
-    .font-title {
-        font-family: 'acumin-pro-condensed';
-        @include font(900, 70px);
-        font-style: italic;
-        color: #fe5e00;
-        width: $wid;
-        margin: 100px auto 0 auto;
-        line-height: 1;
-    }
-    
-    p {white-space: pre-line;}
-    a {text-decoration: none; color:#000;}
-    *{box-sizing: border-box}
-    
-    body {position: relative;}
-    
-    .m-video {
-        width: 100%;
-        position: absolute;
-        z-index: -1;
-        > video {
-        width: 100%;
-        object-fit: cover;
-        left: 0;
-        top: 0;
-        }
-    }
-    
-    
-    .brave {
-    margin: 0 auto;
-    width: $wid;
-    height: 850px;
-    padding: 500px 0 100px 0;
-        >p { 
-            @include flex(space-between,start ){flex-direction: column};
-            line-height: 1;
-            font-family: 'acumin-pro-condensed';
-            @include font(900, 80px);
-            font-style: italic;
-            color: white;
-            >span {
-                @include font(900, 120px);
-            }
-        }
-    }
-    .title {
-        width: $wid;
-        margin: 120px auto 0 auto;
-        color: #fe5e00;
-        font-size: 70px;
-        font-style: oblique;
-        font-weight: 600;
-    }
-    .atc-con{
-        width: $wid;
-        margin: 20px auto;
-        >p{
-            width: 100%;
-            margin: 30px 0;
-            line-height: 1.5;
-            @include font(500, 25px);
-        }
-    }
-    .atc-con-list{
-        width: $wid;
-        margin: 30px auto;
-        @include flex(space-between,center){}
-    }
-    .who{
-        width: 80%;
-        margin: 50px auto;
-        display: flex;
-        flex-wrap: wrap;
-        
-        .who-list {
-            width: 50%;
-            margin-bottom: 50px;
-            text-align: center;
-            @include font(900,15px);
-            >p:nth-of-type(1){
-                @include font(900, 70px);
-                color: #fe5e00;
-                >code {
-                    font-family: inherit;
-                }
-            }
-        }
-    }
-    
-    
-    .about-v {
-        width: $wid;
-        margin: 0 auto;
-        >video{
-            object-fit: cover;
-        }
-    }
-    
-    .values{
-        width: 100%;
-        text-align: center;
-        display: flex;
-        flex-wrap: wrap;
-        white-space : pre-line;
-        margin-bottom: 50px;
-    
-        >b{
-            width: 100%;
-            @include font(800,30px);
-        }
-        >p{
-            width: 100%;
-            color: #000000;
-            @include font(500,15px);
-            padding: 10px 0;
-            line-height: 1.7
-        }
-    }
-    .jour-row{
-        width: $wid;
-        margin: 80px auto;
-        @include flex(center,stretch){};
-        position: relative;
-        > div:nth-of-type(2) {
-            width: 0;
-           
-            border: 2px solid #fe5e00;
-            margin: 0 80px;
-        }
-        figure {
-            position: sticky;
-            top:400px;
-            height: 150px;
-            left: 50%;
-            z-index: 2;
-    
-            >img {
-                width: 150px;
-                position: absolute;
-                top:0;
-                left: 50%;
-                transform: translateX(-50%);
-                z-index: 999;
-            }
-    
-        }
-    }
-    .col1{
-        @include flex(space-between,end){flex-direction: column;}
-    }
-    
-    .jour-col{margin-top: 150px;}
-    
-    .j-year{
-        color: #fe5e00;
-        @include font(800, 50px);
-        margin-bottom: 20px;
-    }
-    .j-month{
-        color: #ff8200;
-        @include font(600, 40px);
-        margin-bottom: 10px;
-    }
-    
-    .j-event {@include font(600, 15px); margin-bottom: 20px;}
-    .j-event2 {@include font(400, 15px); margin-bottom: 10px;}
-    .j-img {width: 100%; margin: 10px 0;}
-    
-    .j-circle {
-        position: absolute;
-        width: 25px;
-        height: 25px;
-        background-color:#fe5e00;
-        border-radius: 50px;    
-    }
-    .circle2{top : 11.5%;}
-    .bt-black {
-        width: $wid;
-        margin: 0 auto;
-        @include flex(center, center){};
-        @include font(600, 16px);
-        >a {
-        background-color: black;
-        color: white;
-        padding: 15px 25px;
-        border-radius: 100px;
-        &:hover{background-color: #fe5e00;}
-        }
-    } 
+
+
 }
-
