--- a/css/reset.scss
+++ b/css/reset.scss
@@ -49,6 +49,9 @@ span {
 figure {
     margin: 0;
 }
+button { 
+    border: 0;
+}
 
 $wid : 1280px;
 
@@ -87,6 +90,11 @@ header {
         >a {
             @include font(600, 25px);
             color: white;
+            &.logo {
+                border: 1px solid #fff;
+                padding: 10px 16px;
+                border-radius: 50px;
+            }
         }
 
         >div {
@@ -96,8 +104,8 @@ header {
 
         >ul {
             @include flex(space-between, flex-start) {}
-
             padding: 0;
+            margin-left: -100px;
 
             .list {
                 width: 160px;
@@ -195,7 +203,7 @@ header.active {
 }
 
 .burger-list {
-    font-family: 'SUITE';
+    // font-family: 'SUITE';
     @include font(900, 30px);
     display: flex;
     flex-direction: column;
@@ -205,15 +213,13 @@ header.active {
     }
 }
 
-
 footer {
     position: relative;
-    margin-top: 120px;
+    // margin-top: 120px;
     width: 100%;
     background-color: #F60035;
     .inner {
         padding: 128px 100px 100px 100px;
-        color: #fff;    
         .ft1 {
             border-bottom: 1px solid #fff;
             padding-bottom: 24px;
