--- a/css/m_reset.scss
+++ b/css/m_reset.scss
@@ -272,6 +272,17 @@
     padding-top: 20px;
   }
 }
+.btn-main {
+  bottom: 40px;
+  transform: translateX(-50%);
+  padding: 0 30px;
+  height: 60px;
+  border-radius: 50px;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+}
 footer { 
   margin-top: 0;
   h1 {
@@ -295,6 +306,19 @@ header.active{
 .burger-ic { display: block; }
 
 }
+
+@media screen and (max-width: 500px) {
+  .btn-main {
+    height: 40px;
+    font-size: 16px;
+  }
+  .atc-con {
+    // .text3 {
+      br { display: none; }
+    // }
+  }
+}
+
 
 
 
