--- a/css/m_reset.scss
+++ b/css/m_reset.scss
@@ -89,6 +89,12 @@
   }
   .img-move2 .img-move { display: none;}
 .move-wrap .img-move3 { display: none; }
+.spot {
+  .img-move {
+      display: none;
+  }
+  
+}
 
 } /*1200 end*/
 
