--- a/css/about.scss
+++ b/css/about.scss
@@ -99,6 +99,7 @@ body {position: relative;}
     z-index: -1;
     > video {
       width: 100%;
+      height: 100vh;
       object-fit: cover;
       left: 0;
       top: 0;
@@ -107,7 +108,7 @@ body {position: relative;}
 
 .brave {
     position: relative;
-    height: 850px;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -241,10 +242,14 @@ body {position: relative;}
          width: 100%;
          display: flex;
          >img{
-             animation-name: ani-2;
+            //  animation-name: ani-2;
+            transform: translateX(30%);
              animation-duration: 15s;
              animation-iteration-count: infinite;
              animation-timing-function: linear;
+             &.ani-2 {
+                animation-name: ani-2;
+             }
          }
          
          @keyframes ani-2{
@@ -253,19 +258,23 @@ body {position: relative;}
           }
      }
 }
-.no-animation {
-    animation: none;
-}
+// .no-animation {
+//     animation: none;
+// }
 .img-move3{
     overflow-x: hidden;
     >figure{
          width: 100%;
          display: flex;
          >img{
-             animation-name: ani-3;
+            //  animation-name: ani-3;
+            transform: translateX(50%);
              animation-duration: 15s;
              animation-iteration-count: infinite;
              animation-timing-function: linear;
+             &.ani-3 {
+                animation-name: ani-3;
+             }
          }
          
          @keyframes ani-3{
