--- a/css/about.scss
+++ b/css/about.scss
@@ -57,8 +57,14 @@ body, html{
     @include font(900, 90px);
     color: #F60035;
     width: 100%;
-    margin: 100px auto 0 auto;
-    text-align: center;
+    margin: 0 auto 0 auto;
+    &.center {
+        text-align: center;
+    }
+    &.sub-title {
+        font-size: 30px;
+        font-weight: 700;
+    }
 
   }
 .font-sub {
@@ -102,36 +108,13 @@ body {
     height: 100vh;
     position: absolute;
     z-index: -1;
-    > video {
-      width: 100%;
-      height: 100vh;
-      object-fit: cover;
-      left: 0;
-      top: 0;
-    }
-    > iframe { 
-        // position: absolute;
-        // top: 0;
-        // left: 0;
-        // width: 100%;
-        // height: 100%;
-        // border: none;
-        // z-index: 100;
-        // margin-top: -80px;
-
-    }
-    &::after {
-        // content: "";
-        // display: block;
-        // position: absolute;
-        // z-index: 300;
-        // left: 0;
-        // bottom: 80px;
-        // width: 100%;
-        // height: 82px;
-        // background: #fff;
-        // opacity: .5;
-    }
+    // > video {
+    //   width: 100%;
+    //   height: 100vh;
+    //   object-fit: cover;
+    //   left: 0;
+    //   top: 0;
+    // }
 }
 
 .video-wrap { 
@@ -140,6 +123,7 @@ body {
     height: 100vh;
     // margin: 0 auto;
     overflow: hidden;
+    position: relative;
 }
 .youtubeWrap {
     z-index:1; 
@@ -147,15 +131,47 @@ body {
     top: 0;
     left: 50%;
     transform: translateX(-50%); 
-    width: 2000px; 
-    // height:1070.230412px; 
-    margin-top:-85.115206px; 
-    overflow: hidden;
+    width: 1920px; 
     height: calc(100vh + 80px);
-    // margin-left: -120px;
-    // margin: -85.115206px auto 0 auto;
-    overflow: hidden;
 }
+
+// .m-video {
+//     width: 100%;
+//     height: 100vh;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     overflow-x: hidden; /* 오버플로우 숨기기 */
+// }
+
+// .video-wrap {
+//     width: 100%;
+//     height: 100%;
+//     position: relative;
+//     overflow-x: hidden; /* 오버플로우 숨기기 */
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
+
+// .youtubeWrap {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     width: 100vw;
+//     height: 100vh;
+//     overflow-x: hidden;
+// }
+
+// .youtubeWrap iframe {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     width: 177.78vh; /* 16:9 비율 유지 */
+//     height: 100vh;
+//     transform: translate(-50%, -50%);
+// }
 
 .brave {
     position: relative;
@@ -179,7 +195,7 @@ body {
 }
 .atc-con{
     width: 100%;
-    margin: 20px auto;
+    margin: 0 auto;
     .text1 {
         color: #333;
         font-size: 22px;
@@ -187,10 +203,15 @@ body {
         line-height: 150%; 
     }
     .text2 {
-        color: #333;
-        font-size: 18px;
-        font-weight: 600;
-        line-height: 160%; 
+        color: #000;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 155%; 
+        span {
+            color: #F60035;
+            font-weight: 700;
+        }
+
     }
     .text3 {
         color: #000;
@@ -200,17 +221,22 @@ body {
     }
     >p{
         // width: 65%;
-        margin: 30px auto;
+        margin: 0 auto;
         line-height: 150%;
-        text-align: center;
+        // text-align: center;
 
-        
         &.text-left {
             text-align: left;
         }
         &.w100 { width: 100%; }
     }
 
+}
+.sub-text {
+    color: #606060;
+    font-size: 15px;
+    // font-weight: 400;
+    line-height: 155%; /* 27.9px */
 }
 .atc-con-list{
     margin: 30px auto;
@@ -770,6 +796,33 @@ body {
         display: block;
     }
 }
+.list-reward { 
+    border-radius: 30px;
+    background: url(../img/bg_gradient.png) no-repeat 0 0 / 100%;
+    padding: 170px 124px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    li {
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+        .label {
+            color: #F60035;
+            text-align: center;
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 155%; 
+            background: #fff;
+            border-radius: 8px;
+        }
+        .info {
+
+        }
+
+    }
+
+}
 
 
 .relative {
@@ -840,6 +893,10 @@ body {
 .pl48 { 
     padding-left: 48px;
 }
+.px16 { 
+    padding-left: 16px;
+    padding-right: 16px;
+}
 .text-center {
     text-align: center;
 }
@@ -847,4 +904,9 @@ body {
     text-align: left;
 }
 
-  @import "./m_about";
+  
+
+
+@import "./m_about";
+
+
